--- a/src/Database/composer.json
+++ b/src/Database/composer.json
@@ -25,13 +25,13 @@
     },
     "require": {
         "php": ">=8.1",
-        "cakephp/core": "^5.2",
+        "cakephp/core": "5.2.*@dev",
         "cakephp/chronos": "^3.1",
-        "cakephp/datasource": "^5.2",
+        "cakephp/datasource": "5.2.*@dev",
         "psr/log": "^3.0"
     },
     "require-dev": {
-        "cakephp/i18n": "^5.2",
+        "cakephp/i18n": "5.2.*@dev",
         "cakephp/log": "^5.2"
     },
     "autoload": {
@@ -43,6 +43,10 @@
         "cakephp/i18n": "If you are using locale-aware datetime formats.",
         "cakephp/log": "If you want to use query logging without providing a logger yourself."
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "extra": {
+        "branch-alias": {
+            "dev-5.next": "5.2.x-dev"
+        }
+    }
 }
