--- a/src/Core/composer.json
+++ b/src/Core/composer.json
@@ -23,7 +23,7 @@
     },
     "require": {
         "php": ">=8.1",
-        "cakephp/utility": "^5.2",
+        "cakephp/utility": "5.2.*@dev",
         "league/container": "^4.2",
         "psr/container": "^1.1 || ^2.0"
     },
@@ -43,6 +43,10 @@
         "cakephp/cache": "To use Configure::store() and restore().",
         "league/container": "To use Container and ServiceProvider classes"
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "extra": {
+        "branch-alias": {
+            "dev-5.next": "5.2.x-dev"
+        }
+    }
 }
