--- a/src/Datasource/composer.json
+++ b/src/Datasource/composer.json
@@ -25,12 +25,12 @@
     },
     "require": {
         "php": ">=8.1",
-        "cakephp/core": "^5.2",
+        "cakephp/core": "5.2.*@dev",
         "psr/simple-cache": "^2.0 || ^3.0"
     },
     "require-dev": {
-        "cakephp/cache": "^5.2",
-        "cakephp/collection": "^5.2",
+        "cakephp/cache": "5.2.*@dev",
+        "cakephp/collection": "5.2.*@dev",
         "cakephp/utility": "^5.2"
     },
     "autoload": {
@@ -43,6 +43,10 @@
         "cakephp/collection": "If you decide to use ResultSetInterface.",
         "cakephp/cache": "If you decide to use Query caching."
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "extra": {
+        "branch-alias": {
+            "dev-5.next": "5.2.x-dev"
+        }
+    }
 }
