--- a/src/Event/composer.json
+++ b/src/Event/composer.json
@@ -31,6 +31,10 @@
             "Cake\\Event\\": "."
         }
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "extra": {
+        "branch-alias": {
+            "dev-5.next": "5.2.x-dev"
+        }
+    }
 }
