--- a/src/Form/composer.json
+++ b/src/Form/composer.json
@@ -22,7 +22,7 @@
     },
     "require": {
         "php": ">=8.1",
-        "cakephp/event": "^5.2",
+        "cakephp/event": "5.2.*@dev",
         "cakephp/validation": "^5.2"
     },
     "autoload": {
@@ -30,6 +30,10 @@
             "Cake\\Form\\": "."
         }
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "extra": {
+        "branch-alias": {
+            "dev-5.next": "5.2.x-dev"
+        }
+    }
 }
