--- a/src/Http/composer.json
+++ b/src/Http/composer.json
@@ -26,9 +26,9 @@
     },
     "require": {
         "php": ">=8.1",
-        "cakephp/core": "^5.2",
-        "cakephp/event": "^5.2",
-        "cakephp/utility": "^5.2",
+        "cakephp/core": "5.2.*@dev",
+        "cakephp/event": "5.2.*@dev",
+        "cakephp/utility": "5.2.*@dev",
         "composer/ca-bundle": "^1.5",
         "psr/http-client": "^1.0.2",
         "psr/http-factory": "^1.1",
@@ -39,10 +39,10 @@
         "laminas/laminas-httphandlerrunner": "^2.6"
     },
     "require-dev": {
-        "cakephp/cache": "^5.2",
-        "cakephp/console": "^5.2",
-        "cakephp/orm": "^5.2",
-        "cakephp/i18n": "^5.2",
+        "cakephp/cache": "5.2.*@dev",
+        "cakephp/console": "5.2.*@dev",
+        "cakephp/orm": "5.2.*@dev",
+        "cakephp/i18n": "5.2.*@dev",
         "paragonie/csp-builder": "^3.0"
     },
     "autoload": {
@@ -61,6 +61,10 @@
         "cakephp/orm": "To use database session storage",
         "paragonie/csp-builder": "To use CspMiddleware"
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "extra": {
+        "branch-alias": {
+            "dev-5.next": "5.2.x-dev"
+        }
+    }
 }
