--- a/src/Event/composer.json
+++ b/src/Event/composer.json
@@ -24,7 +24,7 @@
     },
     "require": {
         "php": ">=8.1",
-        "cakephp/core": "^5.2"
+        "cakephp/core": "5.2.*@dev"
     },
     "autoload": {
         "psr-4": {
