--- a/src/Form/composer.json
+++ b/src/Form/composer.json
@@ -23,7 +23,7 @@
     "require": {
         "php": ">=8.1",
         "cakephp/event": "5.2.*@dev",
-        "cakephp/validation": "^5.2"
+        "cakephp/validation":"5.2.*@dev"
     },
     "autoload": {
         "psr-4": {
