--- a/src/Utility/composer.json
+++ b/src/Utility/composer.json
@@ -26,7 +26,7 @@
     },
     "require": {
         "php": ">=8.1",
-        "cakephp/core": "^5.2"
+        "cakephp/core": "5.2.*@dev"
     },
     "autoload": {
         "psr-4": {
