Update composer branch aliases for split packages. (#18259)

--- a/src/Collection/composer.json
+++ b/src/Collection/composer.json
@@ -35,7 +35,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-5.next": "5.2.x-dev"
+            "dev-5.x": "5.2.x-dev"
         }
     }
 }
