Fix up PHPUnit deprecation handling. (#18378)
* Fix up PHPUnit deprecation handling.
* Fix up deprecation.
* Remove not needed attribute.
* Fix more deprecations.
* Fix CS.
* Allow configuration of error level.

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.0/phpunit.xsd"
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/12.0/phpunit.xsd"
          colors="true"
          bootstrap="tests/bootstrap.php"
          backupGlobals="true"
+         failOnDeprecation="true"
+         displayDetailsOnTestsThatTriggerDeprecations="true"
          cacheDirectory=".phpunit.cache">
     <testsuites>
         <testsuite name="cakephp">
