--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -4,6 +4,8 @@ includes:
 parameters:
 	level: 8
 	treatPhpDocTypesAsCertain: false
+	featureToggles:
+		internalTag: true
 	bootstrapFiles:
 		- tests/bootstrap.php
 	paths:
